# CameraLive

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cameralive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  Callback.h  ImageUtils.cpp  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  log.h  native-lib.cpp
app/src/main/cpp/faac/armeabi-v7a/include/: faac.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/java/com/example/cameralive/: AudioChannel.java  ImageUtils.java  MainActivity.java  RtmpClient.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/cameralive/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
